--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{
-  "homepage": "http://Ponomarev2.github.io/VK3-2",
+
+{ 
+  "homepage": "http://Ponomarev2.github.io/VK3",
   "name": "kozodoi-club-hack",
   "version": "1.0.0",
   "description": "",
@@ -20,6 +21,7 @@
     "surge": "^0.21.3"
   },
   "dependencies": {
+    "-": "0.0.1",
     "@vkontakte/icons": "^1.10.0",
     "@vkontakte/vk-connect": "^1.6.5",
     "@vkontakte/vkui": "^2.30.7",
@@ -27,12 +29,14 @@
     "babel-eslint": "^10.0.3",
     "chalk": "^2.4.2",
     "core-js": "^3.1.4",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-router": "^5.1.1",
-    "react-router-dom": "^5.1.1"
+    "react-router-dom": "^5.1.1",
+    "save-dev": "0.0.1-security"
   },
   "browserslist": {
     "production": [
