--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"homepage": "http://Ponomarev2.github.io/VK3-2",
+  "homepage": "http://Ponomarev2.github.io/VK3-2",
   "name": "kozodoi-club-hack",
   "version": "1.0.0",
   "description": "",
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
+	"predeploy": "npm run build && surge ./build --domain kozodoi-club-hack.surge.sh",
     "deploy": "gh-pages -d build"
   },
   "keywords": [],
