--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Ponomarev2.github.io/VK3-2",
+  "homepage": "http://ponomarev2.github.io/VK3-2",
   "name": "kozodoi-club-hack",
   "version": "1.0.0",
   "description": "",
